[gd_scene load_steps=42 format=3 uid="uid://ccxbx426c28wd"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_x3a2a"]
[ext_resource type="PackedScene" uid="uid://c22nm2abej7nr" path="res://objects/gun.tscn" id="2_athr4"]
[ext_resource type="Texture2D" uid="uid://1tybyb566bj1" path="res://assets/player/orange_player.png" id="2_qnvtk"]
[ext_resource type="FontFile" uid="uid://dlheqg4jcrxrh" path="res://assets/fonts/Teko-VariableFont_wght.ttf" id="4_pl5j0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yb0pu"]
atlas = ExtResource("2_qnvtk")
region = Rect2(0, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0qlo"]
atlas = ExtResource("2_qnvtk")
region = Rect2(48, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s1y2"]
atlas = ExtResource("2_qnvtk")
region = Rect2(64, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgnag"]
atlas = ExtResource("2_qnvtk")
region = Rect2(80, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_snqly"]
atlas = ExtResource("2_qnvtk")
region = Rect2(96, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_57r67"]
atlas = ExtResource("2_qnvtk")
region = Rect2(112, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jhf6"]
atlas = ExtResource("2_qnvtk")
region = Rect2(16, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_sih0j"]
atlas = ExtResource("2_qnvtk")
region = Rect2(32, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_onyxx"]
atlas = ExtResource("2_qnvtk")
region = Rect2(0, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_21a3b"]
atlas = ExtResource("2_qnvtk")
region = Rect2(0, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oun"]
atlas = ExtResource("2_qnvtk")
region = Rect2(0, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvvj5"]
atlas = ExtResource("2_qnvtk")
region = Rect2(48, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2crv"]
atlas = ExtResource("2_qnvtk")
region = Rect2(48, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_obat6"]
atlas = ExtResource("2_qnvtk")
region = Rect2(48, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovtk0"]
atlas = ExtResource("2_qnvtk")
region = Rect2(64, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4sby"]
atlas = ExtResource("2_qnvtk")
region = Rect2(64, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnug2"]
atlas = ExtResource("2_qnvtk")
region = Rect2(64, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyk1h"]
atlas = ExtResource("2_qnvtk")
region = Rect2(80, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_30pma"]
atlas = ExtResource("2_qnvtk")
region = Rect2(80, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5d4v"]
atlas = ExtResource("2_qnvtk")
region = Rect2(80, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jou0q"]
atlas = ExtResource("2_qnvtk")
region = Rect2(96, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_no1ki"]
atlas = ExtResource("2_qnvtk")
region = Rect2(96, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ph8c"]
atlas = ExtResource("2_qnvtk")
region = Rect2(96, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnb3a"]
atlas = ExtResource("2_qnvtk")
region = Rect2(112, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_5du8e"]
atlas = ExtResource("2_qnvtk")
region = Rect2(112, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv4l5"]
atlas = ExtResource("2_qnvtk")
region = Rect2(112, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftucm"]
atlas = ExtResource("2_qnvtk")
region = Rect2(16, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmq3d"]
atlas = ExtResource("2_qnvtk")
region = Rect2(16, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihwwp"]
atlas = ExtResource("2_qnvtk")
region = Rect2(16, 44, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0abq"]
atlas = ExtResource("2_qnvtk")
region = Rect2(32, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xfvo"]
atlas = ExtResource("2_qnvtk")
region = Rect2(32, 22, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwtex"]
atlas = ExtResource("2_qnvtk")
region = Rect2(32, 44, 16, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_n60g3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb0pu")
}],
"loop": true,
"name": &"idle_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0qlo")
}],
"loop": true,
"name": &"idle_135",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s1y2")
}],
"loop": true,
"name": &"idle_180",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgnag")
}],
"loop": true,
"name": &"idle_225",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snqly")
}],
"loop": true,
"name": &"idle_270",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57r67")
}],
"loop": true,
"name": &"idle_315",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jhf6")
}],
"loop": true,
"name": &"idle_45",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sih0j")
}],
"loop": true,
"name": &"idle_90",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onyxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21a3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oun")
}],
"loop": true,
"name": &"run_0",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvvj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2crv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obat6")
}],
"loop": true,
"name": &"run_135",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovtk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4sby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnug2")
}],
"loop": true,
"name": &"run_180",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyk1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30pma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5d4v")
}],
"loop": true,
"name": &"run_225",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jou0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no1ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ph8c")
}],
"loop": true,
"name": &"run_270",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnb3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5du8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv4l5")
}],
"loop": true,
"name": &"run_315",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftucm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmq3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihwwp")
}],
"loop": true,
"name": &"run_45",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0abq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xfvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwtex")
}],
"loop": true,
"name": &"run_90",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dd0bn"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_50wsg"]
radius = 15.0333

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mau1"]
bg_color = Color(0.176471, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.333333, 0.117647, 0.0117647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1
shadow_offset = Vector2(0, 0.515)
anti_aliasing_size = 0.205

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4uqb"]
bg_color = Color(0.729412, 0, 0.117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.560784, 0, 0.054902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5
anti_aliasing_size = 0.092

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.001
script = ExtResource("1_x3a2a")
SPEED = 20.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(-1, -12)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_n60g3")
animation = &"idle_135"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_dd0bn")

[node name="GunGimbal" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
rotation = 1.5708

[node name="Gun" parent="GunGimbal" instance=ExtResource("2_athr4")]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(3, -1.07284e-07)
rotation = 1.5708
speed = 1200
fireSpeed = 1
bulletDespawnTime = 1.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 100.0

[node name="PathfindTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_50wsg")

[node name="ShootTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = -28.0
offset_top = -50.0
offset_right = 28.0
offset_bottom = -36.0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_pl5j0")
theme_override_font_sizes/font_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8mau1")
theme_override_styles/fill = SubResource("StyleBoxFlat_j4uqb")
value = 0.6
show_percentage = false

[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
